app/assets/stylesheets/pages/_home.scss
@import url('https://fonts.googleapis.com/css?family=Amatic+SC:400,700');
@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:400,700');

body{
background-color: #efefef;
background-image: url("https://www.transparenttextures.com/patterns/subtle-white-feathers.png");
/* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
}


.background {
background-image:url("333.jpg");
background-size: cover;
background-position: center center;
 background-attachment: fixed;
 background-color: black !important;

}

.chalk{
 text-align:center;
 margin-top: 10%;
}

.chalk1{
 text-align:center;
}

.title h1{
color: white;
text-align:center;
margin-top: 22%;
font-family: Cabin Sketch;
font-style: normal;
font-weight: bold;
line-height: normal;
font-size:90px !important;
}

.is
{

h3{
    color: white;
    font-family: Amatic sc;
    font-size: 60px;
    font-weight: bold;
    margin-bottom:3%;
    text-align:center;
    margin-left: -34px !important;
  }

   p{
    color: white;
    font-family: roboto mono;
    font-size: 21px;
    text-align:center;
    margin-bottom:5%;
    margin-left: -34px !important;

}
}


.jumbotron{
  background-color: transparent;
}

.images{
  background-image:url("home2.jpg");
  height: 200%;
}

.pictures {
  color:black;
  text-align:center;
  margin-top: 2%;
  h2{
font-family: Amatic SC;
font-style: normal;
font-weight: bold;
line-height: normal;
font-size: 90px;
margin-top: 6%;
margin-bottom: 6%;
  }
}

.program{
  color:black;
  text-align:center;
  margin-top: 2%;

  h2{
  font-family: Amatic SC;
  font-style: normal;
  font-weight: bold;
  line-height: normal;
  font-size: 8em;
  margin-bottom: 3%;
  }

  h3{
    margin-bottom: 5%;
    font-size: 2.1em;
    font-weight: normal;
    font-family: Roboto Mono;
  }

  ul{
    list-style: none;
  }

  li{
    list-style: none;
    font-size: 2.5em;
  }

  h5{
    margin-top: 3%;
    font-size: 3.5em;
  }
  h1{
    font-family: Cabin Sketch;
    font-size: 3.5em;
  }
}


/********************* Shopping Demo-5 **********************/
.product-image5 .pic-1,.product-image5 .pic-2{backface-visibility:hidden;transition:all .5s ease 0s}
.product-grid5{font-family:Poppins,sans-serif;position:relative}
.product-grid5 .product-image5{overflow:hidden;position:relative}
.product-grid5 .product-image5 a{display:block}
.product-grid5 .product-image5 img{width:100%;height:auto;border-radius: 1px;}
.product-image5 .pic-1{opacity:1}
.product-grid5:hover .product-image5 .pic-1{opacity:0}
.product-image5 .pic-2{width:100%;height:100%;opacity:0;position:absolute;top:0;left:0}
.product-grid5:hover .product-image5 .pic-2{opacity:1}
.product-grid5 .social{padding:0;margin:0;position:absolute;top:10px;right:10px}
.product-grid5 .social li{display:block;margin:0 0 10px;transition:all .5s}
.product-grid5 .social li:nth-child(2){opacity:0;transform:translateY(-50px)}
.product-grid5:hover .social li:nth-child(2){opacity:1;transform:translateY(0)}
.product-grid5 .social li:nth-child(3){opacity:0;transform:translateY(-50px)}
.product-grid5:hover .social li:nth-child(3){opacity:1;transform:translateY(0);transition-delay:.2s}
.product-grid5 .social li a{color:#888;background:#fff;font-size:14px;text-align:center;line-height:40px;height:40px;width:40px;border-radius:50%;display:block;transition:.5s ease 0s}
.product-grid5 .social li a:hover{color:#fff;background:#1e3799}
.product-grid5 .select-options{color:#D32F13;background-color:#fff;font-size:13px;font-weight:400;text-align:center;text-transform:uppercase;padding:15px 5px;margin:0 auto;opacity:0;display:block;position:absolute;width:92%;left:0;bottom:-100px;right:0;transition:.5s ease 0s}
.product-grid5 .select-options:hover{color:#fff;background-color:#D32F13;text-decoration:none}
.product-grid5:hover .select-options{opacity:1;bottom:10px}
.product-grid5 .product-content{padding:20px 10px}
.product-grid5 .title{font-size:15px;font-weight:600;text-transform:capitalize;margin:0 0 10px;transition:all .3s ease 0s}
.product-grid5 .title a{color:white}
.product-grid5 .title a:hover{color:#1e3799}
.product-grid5 .price{color:#222;font-size:13px;font-weight:500;letter-spacing:1px}
@media only screen and (max-width:990px){.product-grid5{margin-bottom:30px}
}

.blogimage{
  height: 10vh;
}

.imagehome{
margin-bottom: 40%;
margin-top:10%;
img {
    vertical-align: middle;
    border-style: none;
    margin: 20px;
}
}

.product-grid5 .title a {
    color: black;
    line-height: normal;
    font-size:48px;
    font-weight: bolder !important;
    font-family: Amatic SC;
}


.product-image5{
  border-radius:10px;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
}

.picture1{
position: relative;
transform: matrix(1, -0.07, 0.07, 1, 0, 0);
height: 164.89px;
left: -9%;
top: 2%;
margin-top:12%;
box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);

}

.picture2{
position:absolute;
transform: matrix(1, -0.07, 0.07, 1, 0, 0);
height: 479.17px;
left: 35%;
box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);

}


.picture3{
position:absolute;
transform: matrix(0.98, 0.18, -0.2, 0.98, 0, 0);
height: 490.71px;
left: 45%;
margin-top:25%;
box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);

}


@media only screen and (max-width: 700px) {
  .imagehome img{
    height:112px;
  }

  .title h1 {
  // margin-top: 60%;
  // font-size: 40px !important;
}

.imagehome img {
    margin: 5px;
}

.navbar-fixed-top.scrolled a {
    color: black !important;
    font-weight: lighter !important;

}
}


/* Smartphones (portrait and landscape) ----------- */
@media only screen
and (min-device-width : 320px)
and (max-device-width : 480px) {
/* STYLES GO HERE */
.title h1 {
  // margin-top: 60%;
  font-size: 40px ;
}

}

/* Smartphones (landscape) ----------- */
@media only screen
and (min-width : 321px) {
/* STYLES GO HERE */
.title h1 {
  // margin-top: 60%;
  font-size: 40px ;
}

}

/* Smartphones (portrait) ----------- */
@media only screen
and (max-width : 320px) {
.title h1 {
  // margin-top: 60%;
  font-size: 40px ;
}

/* STYLES GO HERE */
}

// /* iPads (portrait and landscape) ----------- */
// @media only screen
// and (min-device-width : 768px)
// and (max-device-width : 1024px) {
// /* STYLES GO HERE */


// }

// /* iPads (landscape) ----------- */
// @media only screen
// and (min-device-width : 768px)
// and (max-device-width : 1024px)
// and (orientation : landscape) {
// /* STYLES GO HERE */


// }

// /* iPads (portrait) ----------- */
// @media only screen
// and (min-device-width : 768px)
// and (max-device-width : 1024px)
// and (orientation : portrait) {
// /* STYLES GO HERE */


// }



/* iPhone 5 (portrait &amp; landscape)----------- */
@media only screen
and (min-device-width : 320px)
and (max-device-width : 568px) {
/* STYLES GO HERE */
.title h1 {
  margin-top: 60%;
  font-size: 40px !important;
}

}

/* iPhone 5 (landscape)----------- */
@media only screen
and (min-device-width : 320px)
and (max-device-width : 568px)
and (orientation : landscape) {
/* STYLES GO HERE */
.title h1 {
  margin-top: 60%;
  font-size: 40px !important;
}

}

/* iPhone 5 (portrait)----------- */
@media only screen
and (min-device-width : 320px)
and (max-device-width : 568px)
and (orientation : portrait) {
/* STYLES GO HERE */
.title h1 {
  margin-top: 60%;
  font-size: 40px !important;
}

}






.product-grid5 .product-image5 {
    overflow: hidden;
    position: relative;
    border-radius: 1%;
}



.my_class_name {
  margin: 0 auto;
  border: 20px outset #ddd;
}


.resp-container {
    position: relative;
    overflow: hidden;
    padding-top: 56.25%;
}

.resp-iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    border: 0;
}





/********************* Shopping Demo-5 **********************/
.product-image5 .pic-1,.product-image5 .pic-2{backface-visibility:hidden;transition:all .5s ease 0s}
.product-grid51{font-family:Poppins,sans-serif;position:relative}
.product-grid51 .product-image5{overflow:hidden;position:relative}
.product-grid51 .product-image5 a{display:block}
.product-grid51 .product-image5 img{width:100%;height:auto;border-radius: 1px;}
.product-image5 .pic-1{opacity:1}
.product-grid51:hover .product-image5 .pic-1{opacity:0}
.product-image5 .pic-2{width:100%;height:100%;opacity:0;position:absolute;top:0;left:0}
.product-grid51:hover .product-image5 .pic-2{opacity:1}
.product-grid51 .social{padding:0;margin:0;position:absolute;top:10px;right:10px}
.product-grid51 .social li{display:block;margin:0 0 10px;transition:all .5s}
.product-grid51 .social li:nth-child(2){opacity:0;transform:translateY(-50px)}
.product-grid51:hover .social li:nth-child(2){opacity:1;transform:translateY(0)}
.product-grid51 .social li:nth-child(3){opacity:0;transform:translateY(-50px)}
.product-grid51:hover .social li:nth-child(3){opacity:1;transform:translateY(0);transition-delay:.2s}
.product-grid51 .social li a{color:#888;background:#fff;font-size:14px;text-align:center;line-height:40px;height:40px;width:40px;border-radius:50%;display:block;transition:.5s ease 0s}
.product-grid51 .social li a:hover{color:#fff;background:#1e3799}
.product-grid51 .select-options{color:#D32F13;background-color:#fff;font-size:13px;font-weight:400;text-align:center;text-transform:uppercase;padding:15px 5px;margin:0 auto;opacity:0;display:block;position:absolute;width:92%;left:0;bottom:-100px;right:0;transition:.5s ease 0s}
.product-grid51 .select-options:hover{color:#fff;background-color:#D32F13;text-decoration:none}
.product-grid51:hover .select-options{opacity:1;bottom:10px}
.product-grid51 .product-content{padding:20px 10px}
.product-grid51 .title{font-size:15px;font-weight:600;text-transform:capitalize;margin:0 0 10px;transition:all .3s ease 0s}
.product-grid51 .title a{color:white}
.product-grid51 .title a:hover{color:#1e3799}
.product-grid51 .price{color:#222;font-size:13px;font-weight:500;letter-spacing:1px}
@media only screen and (max-width:990px){.product-grid51{margin-bottom:30px}
}

.product-grid51 .product-image5 {
    overflow: hidden;
    position: relative;
    border-radius: 1%;
}

.product-grid51 .title a {
    color: white;
    line-height: normal;
    font-size: 48px;
    font-weight: bolder !important;
    font-family: Amatic SC;
}

.product-grid51 .title a:hover {
  color:ghostwhite;
}

.dark1 {
    font-weight: bold !important;
    color:white;
}

@media screen and (device-aspect-ratio: 3/4) {
.imagehome img {
    height: 220px !important;
    margin: 6px !important;
}
}

